finally fixed all hamburger X jumping bug

--- a/client/src/sass/components/Aside.scss
+++ b/client/src/sass/components/Aside.scss
@@ -18,7 +18,7 @@
 
   .container {
     padding: 0;
-    height: 100%;
+    height: 100%; 
   }
 
   .wide-screen-display {
@@ -48,7 +48,7 @@
   .aside-comp {
     top: 0;
     left: 0;
-    height: 8vh;
+    height: 65px; 
     max-width: 100%;
     position: sticky;
     padding: 0 1.5rem;
@@ -57,6 +57,7 @@
 		background-color: rgb(0, 0, 0);
 
     .container {
+      padding: 1rem;
       display: flex;
       flex-wrap: nowrap;
       flex-direction: row;
@@ -81,6 +82,7 @@
 
     li {
       margin: 1.5rem 0;
+      font-size: 1.1rem;
     }
   }
 }
